--- a/src/index.css
+++ b/src/index.css
@@ -2,31 +2,58 @@
 
 html, body {
     height: 100%;
+    font-family: Poppins;
 }
 
 body {
     font-family: Poppins;
     margin: 0;
     padding: 0;
-    background: linear-gradient(180deg, rgba(9,35,175,1) 0%, rgba(0,0,0,1) 100%);
+    background: rgb(18,22,25);
+    background: linear-gradient(180deg, rgba(18,22,25,1) 19%, rgba(17,21,24,1) 33%, rgba(14,18,20,1) 58%);
     color: #ffffff;
+    
+}
+
+form{
+    display: flex;
+    align-items: center;
+    gap: 1em;
 }
 
 button{
-    background: #1646a0 ;
-    color: #FFF;
-    padding: 0 45px;
-    border: 2px solid #fff;
+    background: #324691;
+    color: #fff;
+    padding: 8px 25px;
+    border: 2px solid ;
     border-radius: 25px;
-    height: 50px;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1em;
     cursor: pointer;
     transition: .4s;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000; 
+    letter-spacing: 1px;
 }
 
 button:hover{
-    background-color: #0923AF;
+    background-color: #25356e;
 }
 
+.startscreen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    
+}
+.startscreen p {
+    margin-top: 2em;
+    color: #fdc00d;
+}
+
+.logo{
+    width: 80%;
+}
